# tp-3-damianpiotr

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml  testuje.py
projekt 3/: LICENSE
projekt 3/src/: main.cpp
projekt 3/src/projekt3/: __init__.pyi
projekt 4/: README.md  winda.sln
projekt 4/winda/: Resource.h  winda.cpp  winda.rc  winda.vcxproj
raport/: oddanie_projektu.ipynb
src/projekt3/: __init__.py
